# duckduckgo-search-mcp

./: .gitignore  LICENSE.md  README.md  pyproject.toml
duckduckgo_search_mcp/core/: cache.py  config.py  ddg.py  filters.py
duckduckgo_search_mcp/tools/: fetch.py  research.py  search.py
prompts/: research_report.md
tests/: test_cache.py  test_extractor.py  test_filters.py  test_formatters.py
web_search_mcp/: server.py
web_search_mcp/core/: cache.py  extractor.py  fetcher.py  formatters.py  pipeline.py
web_search_mcp/tools/: research.py
