[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "duckduckgo-search-mcp"
version = "0.1.0"
description = "Generic web research MCP server — search, fetch, and research tools with streaming, caching, and configurable filtering."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "httpx[http2]>=0.27.0",
    "ddgs>=6.0.0",
]

[project.optional-dependencies]
dev   = ["pytest>=8.0.0", "pytest-asyncio>=0.23.0", "anyio>=4.0.0"]

[project.scripts]
web-search-mcp = "duckduckgo_search_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["duckduckgo_search_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
